<resources>
    <string name="app_name">Personal Proyect</string>

    <string name="hello_world">My school classes</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_materias">Add class</string>

    <string name="title_activity_principal">My school classes</string>
    <string name="addmateria">New class data</string>

    <string name="title_activity_registrotareas">Registration homework</string>
    <string name="añadirtarea">Add homework</string>
    <string name="nombretarea">Name of homework</string>
    <string name="fechaentrega">Date of presentation</string>
    <string name="detalles">Details of homework</string>
    <string name="guardartarea">Save homework  </string>
    <string name="modificartarea">modify homework</string>
    <string name="eliminartarea">Delete homework</string>
    <string name="buscartarea">Search homework</string>

    <string name="title_activity_registromaterias">Registration school class</string>
    <string name="añadirmateria">Add class</string>
    <string name="nombremateria">Name of class</string>
    <string name="profesor">Name of teacher</string>
    <string name="hentrada">Time input</string>
    <string name="hsalida">Hora de salida</string>
    <string name="dias">Dias de clases</string>

    <string name="title_activity_editartarea">Task Edit </string>
    <string name="idtarea">Homework Id</string>
    <string name="title_activity_eliminartarea">Delete homework</string>

    <string name="title_activity_mostrartareas">Show homework</string>
    <string name="vertodo">Show all</string>
    <string name="title_activity_registro">Registration</string>
    <string name="titulo">Title</string>
    <string name="descripcion">Description</string>
    <string name="id">Id:</string>

    <string name="title_activity_editarmateria">Edit school class</string>
    <string name="idmateria">School class Id </string>
    <string name="nombreprofesor">Name of teacher </string>
    <string name="modificarmateria">Edit school class </string>
    <string name="buscarmateria">Search school class</string>
    <string name="title_activity_eliminarmateria">Delete school class</string>
    <string name="eliminarmateria">Delete school class</string>
    <string name="guardarmateria">Save</string>

</resources>
