<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.windows.proyectopersonal.registrotareas"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView android:text="@string/añadirmateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/ed_nombremateria"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/nombretarea"
            android:drawableLeft="@android:drawable/ic_menu_agenda" />
        <EditText
            android:id="@+id/ed_maestro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/profesor"
            android:drawableLeft="@android:drawable/ic_menu_agenda"
            android:onClick="asignarfecha"
            />




        <Button
            android:id="@+id/btnguardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/guardartarea"
            android:onClick="alta"
            />

        <Button
            android:id="@+id/btnmodificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/modificartarea"
            android:onClick="consultamate"
            />
        <!--
        <Button
            android:id="@+id/btnborrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/eliminartarea"
            android:onClick="baja"
            />
        <Button
            android:id="@+id/btnbuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buscartarea"
            android:onClick="consulta"
            />
            -->
    </LinearLayout>

</ScrollView>
