<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.windows.proyectopersonal.eliminartarea"
    android:orientation="vertical">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <EditText
        android:inputType="number"
        android:id="@+id/ed_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/idtarea"
        android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
        />
</ScrollView>
    <Button
        android:id="@+id/btnborrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/eliminartarea"
        android:onClick="baja"
        />

</LinearLayout>
