<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.windows.proyectopersonal.registrotareas"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView android:text="@string/añadirtarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/ed_nombretarea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/nombretarea"
        android:drawableLeft="@android:drawable/ic_menu_agenda" />
    <TextView android:text="@string/fechaentrega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/ed_fecha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/fechaentrega"
        android:drawableLeft="@android:drawable/ic_menu_today"
        android:onClick="asignarfecha"
       />

    <TextView android:text="@string/detalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/ed_descripcion"
        android:drawableLeft="@android:drawable/ic_menu_edit" />

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/guardartarea"
        android:onClick="alta"
        />
    <!--
    <Button
        android:id="@+id/btnmodificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/modificartarea"
        android:onClick="modificacion"
        />
    <Button
        android:id="@+id/btnborrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/eliminartarea"
        android:onClick="baja"
        />
    <Button
        android:id="@+id/btnbuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buscartarea"
        android:onClick="consulta"
        />
        -->
</LinearLayout>

</ScrollView>
