<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardBackgroundColor="@color/Accent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/c_id"
            android:text="@string/id"
            android:textSize="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/c_titulo"
            android:text="@string/titulo"
            android:textSize="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/c_fecha"
            android:text="@string/fechaentrega"
            android:textSize="16dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/c_descripcion"
            android:text="@string/descripcion"
            android:textSize="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@android:drawable/ic_menu_delete"
            android:layout_alignBottom="@+id/c_descripcion"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</android.support.v7.widget.CardView>