<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="120dp"
    card_view:cardCornerRadius="1dp"
    card_view:cardBackgroundColor="#e8eaf6"
    card_view:cardElevation="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="1dp"


   >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cm_idmateria"
            android:text="@string/id"
            android:textSize="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cm_nombre"
            android:text="@string/nombremateria"
            android:textSize="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cm_profesor"
            android:text="@string/nombreprofesor"
            android:textSize="16dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@android:drawable/ic_menu_edit"
            android:id="@+id/imageView"
            android:layout_alignBottom="@+id/cm_profesor"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@android:drawable/ic_menu_delete"
            android:id="@+id/imageView2"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/linea2"
            android:layout_alignStart="@+id/linea2"
            android:visibility="invisible"/>


        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#ffd5d5d5"
            android:id="@+id/linea"

            android:layout_below="@+id/cm_nombre"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="#ffd5d5d5"
            android:id="@+id/linea2"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/imageView"
            android:layout_toStartOf="@+id/imageView" />
    </RelativeLayout>

</android.support.v7.widget.CardView>